--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
       <a href="#">Inicio</a>
       <a href="login.html">Registrarse</a>
       <a href="mailto:24siemprels@gmail.com?subject=Más información">Contacto</a>
-      <a href="https://goo.gl/maps/2cQqEnfV1caKamaDA" target="_blank" rel="noopener noreferrer">Dirección</a>
-    </nav>
+      </nav>
   </div>
   <div class="menu-wrap">
     <input type="checkbox" class="toggler">
@@ -25,32 +24,17 @@
     <div class="menu">
       <div>
         <div>
-          <div class="card">
-            <img src="Menu/CervezasArtesanales.jpg" alt="Cervezas Artesanales">
-            <div class="description">Cervezas artesanales: 4 opciones de gran sabor para los distintos tipos de paladres, desde los suaves aromas del comienzo hasta la noche mas extensa de tu vida</div>
-            <div class="price">$5</div>
-          </div>
-          <br>
-          <div class="card">
-            <img src="Menu/NachosConQueso.jpg" alt="Nachos con Queso">
-            <div class="description">Nachos con queso: crujientes tortillas de maíz cubiertas con queso derretido, salsa guacamole, pico de gallo, mayonesa y ají.</div>
-            <div class="price">$8</div>
-          </div>
-          <br>
-          <div class="card">
-            <img src="Menu/LaMejorPareja.png" alt="Triple Hamburguesa con papas">
-            <div class="description">La Mejor Pareja: 3 hamburguesas jugosas, cebolla caramelizada, huevo frito, lechuga, tomate, salsa casera, cheddar, mayonesa y pan con semillas.</div>
-            <div class="price">$12</div>
-          </div>
+          <ul>
+            <li><a href="login.html">Registrarse</a></li>
+            <li><a href="mailto:24siemprels@gmail.com?subject=Más información">Contacto</a></li>
+            <li><a href="https://goo.gl/maps/2cQqEnfV1caKamaDA" target="_blank" rel="noopener noreferrer">Dirección</a></li>
+          </ul>
         </div>
-      </div>
-    </div>
-  </div>    
+      </div> 
         </div>
       </div>
     </div>    
   </div>
-
   <header id="showcase">
     <div class="container showcase-container">
       <div class="container showcase-container menu-container">
@@ -59,6 +43,19 @@
     </div>
   </header>
 </body>
+<div class="card-container">
+  <div class="amigos-en-bar">
+    <img src="img/Amigos.jpg" alt="Amigos en NUCBAR">
+  </div>
+  <div class="titulo">
+    <h4>Lugar de Encuentro para Amigos</h4>
+    <div class="text-container1">
+      <p>NUCBAR es el lugar ideal para reunirse con amigos y disfrutar de una experiencia inolvidable. Aquí encontrarás buena música en vivo, una amplia selección de cervezas artesanales, deliciosas hamburguesas y sabrosos nachos con queso.</p>
+      <p>Nuestro establecimiento está diseñado para ofrecerte un ambiente acogedor y divertido, donde podrás pasar momentos increíbles junto a tus seres queridos. Ya sea que estés buscando relajarte después de un día agotador o celebrar una ocasión especial, en NUCBAR encontrarás todo lo que necesitas.</p>
+      <p>Sumérgete en nuestra atmósfera única, disfruta de la buena compañía y saborea nuestros deliciosos platos y bebidas. Te garantizamos que tu visita a NUCBAR será una experiencia memorable llena de risas, conversaciones animadas y momentos inolvidables.</p>
+    </div>
+  </div>
+</div>
 <div class="card-container">
   <div class="card-image">
       <img src="Menu/CervezasArtesanales.jpg" alt="Cervezas Artesanales">
@@ -107,9 +104,6 @@
     <h3>NUCBAR</h3>
     <p>Somos tu lugar de encuentro para disfrutar de la mejor cerveza y experiencias temáticas. En NUCBAR, ofrecemos una amplia variedad de cervezas artesanales inspiradas en diferentes temáticas, desde películas y series hasta eventos especiales.</p>
     <p>No dudes en contactarnos para obtener más información:</p>        
-  </div>
-  <div class="footer-links">
-    <a href="https://goo.gl/maps/2cQqEnfV1caKamaDA" target="_blank" rel="noopener noreferrer">Dirección</a>
   </div>
   <p class="footer-text">&copy; 2023 NUCBAR. Todos los derechos reservados.</p>
 </footer>
